welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:19: error: ';' expected but 'return' found.
  } return 1
    ^golomb:20: error: ';' expected but 'return' found.
} return T(num-1)
  ^